--- a/account/templates/account/students/view.html
+++ b/account/templates/account/students/view.html
@@ -35,10 +35,10 @@
                                 <h5>Actions</h5>
                                 <hr>
                                 <p>
-                                    <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'update_student' student.id %}">Update Student</a>
+                                    <a class="btn btn-outline-info btn-sm btn-block" href="{% url 'update_student' student.id %}">Edit Profile</a>
                                 </p>
                                 <p>
-                                    <a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'delete_student' student.id %}">Delete Student</a>
+                                    <a class="btn btn-outline-danger btn-sm btn-block" href="{% url 'delete_student' student.id %}">Delete Profile</a>
                                 </p>
                             </div>
                         </div>
