--- a/account/templates/account/students/all.html
+++ b/account/templates/account/students/all.html
@@ -50,7 +50,7 @@
                                         <td>{{ student.last_name }}</td>
                                         <td>{{ student.first_name }}</td>
                                         <td>{{ student.matric_no }}</td>
-                                        <td>{{ student.hostel }}</td>
+                                        <td>{{ student.hostel.name }}</td>
                                         <td>{{ student.room.no }}</td>
                                         <td>
                                             <div class="sb-nav-link-icon">
